header made sticky, alignment of banner 1 corrected

--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
     height: 100px;
     border: grey;
     box-shadow: 2px 2px 10px #bdbcbc;
+    position: sticky;
+    top:0;
+    background-color: white;
 }
 
 .mainheadertext {
@@ -109,13 +112,16 @@ body {
 
 .banner1img img {
     height: 421px;
-    width: 730px;
+    width: 722px;
 }
 
 .banner1 {
     display: flex;
     flex-direction: row;
-    padding: 35px;
+    height: 629px;
+    margin-bottom: -177px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 #banner1textp {
